--- a/mygcs/build.gradle
+++ b/mygcs/build.gradle
@@ -26,8 +26,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'org.jetbrains:annotations-java5:15.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -42,7 +44,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:16.0.0'
 
     // 네이버 지도 SDK
-    implementation 'com.naver.maps:map-sdk:3.4.0'
+    implementation 'com.naver.maps:map-sdk:3.11.0'
 
     // Drone API
     implementation project(':ClientLib')
